[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aleksandr Nokhrin <nokhrin.alni@gmail.com>"]
repository = "https://github.com/what3vercode/mockito"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
