[package]
name = "mockito-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Mockito mock tool"

[dependencies]
glob = "0.3.3"
jmespath = "0.4.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "sync"]}
urlencoding = "2.1"

[dev-dependencies]
rstest = "0.26.1"
