[package]
name = "mockito-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NAPI-RS bindings for Mockito core library"

[lib]
crate-type = ["cdylib"]

[dependencies]
mockito-core = { path = "../mockito-core" }
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
napi = { version = "3.7.1", features = ["async", "serde-json"] }
napi-derive = "3.4.1"

[build-dependencies]
napi-build = "2.3.1"